# FluMutDB

./: .gitignore  FluMutDb5.sql  README.md  flumut_db.sql  pyproject.toml
.github/ISSUE_TEMPLATE/: new-marker-request.md
.github/workflows/: compile_sqlite_action.yml  create-release-and-deploy.yml  publish-to-pypi.yml
src/flumut_db_data/: flumut_db.sqlite
src/flumutdb/: __init__.py  core.py  exceptions.py  initializer.py  loader.py  models.py  updater.py
src/flumutdb/data/: flumut_db.sqlite
update_v7/: flumut_db_v7.sqlite  ha1_numbering.tsv  migrate.py  new_refs.json  sql_updates.py  update_db.sh
update_v7/data/: ha2_numbering.tsv  na_numbering.tsv
update_v7/sql_files/: flumut_db.sql  flumut_db.sqlite  sql_updates.sql
