[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
authors = [
  {name = "Edoardo Giussani", email = "egiussani@izsvenezie.it"},
  {name = "Alessandro Sartori", email = "asartori@izsvenezie.it"},
]
dependencies = [
  "peewee>=4.0.3",
  "platformdirs>=2.5.0",
]
description = "A database of influenza virus markers and their effects on antigenicity and drug resistance."
dynamic = ["version"]
license = "AGPL-3.0"
license-files = ["LICENSE"]
name = "flumutdb"
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Home-page = "https://github.com/izsvenezie-virology/FluMutDb"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flumutdb = ["**/*"]

[tool.setuptools.dynamic]
version = {attr = "flumutdb.__version__"}
